# canonicalize

./: Cargo.toml  README.md
src/: lib.rs  std.rs
