[package]
name = "canonicalize"
version = "0.1.2"
authors = ["Matthias Kaak <m.kaak@protonmail.ch>"]
edition = "2018"
description = "A rust library to canonicalize values"
readme = "README.md"
repository = "https://github.com/zvavybir/canonicalize"
license = "LGPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
