[package]
name = "canonicalize"
version = "0.1.5"
authors = ["Matthias Kaak <m.kaak@protonmail.ch>"]
edition = "2018"
description = "A rust library to canonicalize values"
documentation = "https://docs.rs/canonicalize"
readme = "README.md"
homepage = "https://github.com/zvavybir/canonicalize"
repository = "https://github.com/zvavybir/canonicalize"
license = "LGPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
